# DeskAI

./: .env.example  .env.sample  .eslintrc.cjs  .eslintrc.js  .flake8  .gitignore  00_START_HERE_16_PROBLEMS.md  16_PROBLEMS_FIXED.md  API.md  ARCHITECTURE.md  BUILD_COMPLETE.md  BUILD_SUMMARY.md  CHANGELOG.md  COMPLETE_TOOL_EXAMPLES.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DELIVERY_CHECKLIST.md  DEPLOYMENT_CHECKLIST.md  DESKRAI_OLLAMA_FIXED.md  DOCKER_QUICKSTART.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_LLM.md  DOCUMENTATION_INDEX_TOOLS.md  DOCUMENT_MODELS.md  DeskAI.spec  EXAMPLES.md  FINAL_DELIVERY.md  FINAL_NEXT_STEPS.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  FIX_OLLAMA_ENV.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL.bat  INSTALLATION_GUIDE.md  ISSUE_RESOLUTION.md  JUST_FIX_IT.md  LEARNING_MODE.md  LICENSE  (+61 more)
DeskAI-main/: .pylintrc  pytest.ini
config/: models.json
desktop-app/: README.md  ai_chat.py  build.ps1  database.py  document_processor.py  llm_manager.py  llm_model_selector_ui.py  main.py  requirements.txt  run.ps1
docker/: AI_CHAT_TROUBLESHOOTING.md  Caddyfile  DROP_ZONE_UPLOAD.md  Dockerfile  FEATURE_SUMMARY.md  FOLDER_PATH_UPLOAD.md  FOLDER_UPLOAD_GUIDE.md  FOLDER_UPLOAD_QUICKSTART.md  MODEL_GUIDE.md  OLLAMA_NETWORK_FIX.md  OLLAMA_SETUP.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_GUIDE.md  SPEED_GUIDE.md  TEST_DROP_ZONE.md  TEXT_EXTRACTION_FEATURE.md  TRUE_FOLDER_UPLOAD.md  app.py  docker-compose.yml  first-run.sh  migrate_extract_text.py  requirements.txt
docs/: EXAMPLES.md  INDEX.md  SCAN_TO_SEARCH.md  USER_GUIDE.md
examples/: README.md  basic-usage.ts  learning-mode.ts  router-api.ts  scan-feature.ts  secretary-tools.ts  workflow-demo.ts
installer/: __init__.py  hardware_check.py  install.ps1  setup.py  setup_launcher.py
ocr/: __init__.py  cli.py  config.yaml  detect.py  preprocess.py  recognize.py  requirements.txt  router.py
router/: Dockerfile  build.ps1  router.py  test_env.py  test_ollama.py
scripts/: setup_local.ps1
src/: App.tsx  agent.js  agent.ts  agents.ts  index.js  index.ts  learning.ts  memory.js  memory.ts  models.ts  router.js  router.test.ts  router.ts  scan-processor.js  scan-processor.ts  scanner.ts  styles.css  taskChain.js  taskChain.ts  tools.js  (+3 more)
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
(+101 files in other folders)
