[package]
name = "deskai"
version = "0.1.0"
description = "DeskAI - Offline Meta-Agent"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-file", "protocol-asset", "fs-exists", "dialog-save", "dialog-open", "fs-read-dir", "fs-rename-file", "fs-create-dir", "fs-write-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tesseract = "0.14"
image = "0.24"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
