[package]
name = "deskai"
version = "1.0.0"
description = "100% offline meta-agent for desktop with OCR and AI integration"
authors = ["DeskAI Team"]
license = "MIT"
repository = "https://github.com/vand1290/DeskAI"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "shell-open", "dialog-all", "protocol-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
